[package]
authors = ['Bernardo A. Rodrigues']
description = 'Substrate Pallet for writing collectible on-chain text messages'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'MIT'
name = 'pallet-letters'
publish = false
repository = 'https://github.com/NFTletter/pallet-letters/'
version = '4.0.0-dev'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-std = { default-features = false, version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22"}
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", optional = true }
serde = { version = "1.0.136", features = ["derive"] }

pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", branch = "polkadot-v0.9.22"}

[dev-dependencies]
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    "scale-info/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-balances/std',
]
try-runtime = ['frame-support/try-runtime']
